Add meta-learning research area and Medium publications section

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#research">Research</a></li>
                 <li><a href="#team">Team</a></li>
+                <li><a href="#publications">Publications</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -44,6 +45,10 @@
                     <p>Building models with calibrated confidence and uncertainty quantification.</p>
                 </div>
                 <div class="research-item">
+                    <h3>Meta-Learning</h3>
+                    <p>Enabling models to learn how to learn, adapting quickly to new tasks and domains.</p>
+                </div>
+                <div class="research-item">
                     <h3>Efficient Learning</h3>
                     <p>Cost-effective training methods using LoRA and curriculum learning approaches.</p>
                 </div>
@@ -53,6 +58,16 @@
         <section id="team" class="section">
             <h2>Team</h2>
             <p>Led by researchers passionate about pushing the boundaries of artificial intelligence.</p>
+        </section>
+
+        <section id="publications" class="section">
+            <h2>Publications & Insights</h2>
+            <p>Explore our research and thoughts on AI, machine learning, and the path to human-level intelligence.</p>
+            <div class="publications-link">
+                <a href="https://medium.com/@raveeshupahuja" target="_blank" rel="noopener noreferrer" class="medium-link">
+                    Read our articles on Medium →
+                </a>
+            </div>
         </section>
 
         <section id="contact" class="section">
