Make Efficient Learning description more general

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </div>
                 <div class="research-item">
                     <h3>Efficient Learning</h3>
-                    <p>Cost-effective training methods using LoRA and curriculum learning approaches.</p>
+                    <p>Developing scalable and cost-effective training methods for advanced AI systems.</p>
                 </div>
             </div>
         </section>
