Update team description with company backgrounds

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         <section id="team" class="section">
             <h2>Team</h2>
-            <p>Led by researchers passionate about pushing the boundaries of artificial intelligence.</p>
+            <p>Our team consists of machine learning engineers with experience at leading technology companies including Microsoft, Twitter, and Dropbox, united by a shared vision of achieving human-level intelligence.</p>
         </section>
 
         <section id="publications" class="section">
